basic page listing

--- a/amazon/src/app/header/header.component.html
+++ b/amazon/src/app/header/header.component.html
@@ -1,28 +1,43 @@
 <div class="header-container">
-    <div class="title">
+    <div class="title border-white" style="display: flex; align-items: center;">
         <img src="https://zeevector.com/wp-content/uploads/Amazon-Logo-White.png" alt="">
+        <span style="font-size: 15px; margin-bottom: 7px;">.in</span>
     </div>
-    <div class="deliver">
-        deliver to gopika
+    <div class="deliver border-white">
+        <div class="deliverG">
+            Hello,
+        </div>
+        <div class="deliverLoc">
+            <span class="material-symbols-outlined" id="locationIcon">location_on</span>
+            Select your address
+        </div>
     </div>
     <div class="search">
         <select>
-            <option value="all" class="search-all">All</option>
+            <option value="all" class="searchall">All</option>
         </select>
         <input type="number" placeholder="Search Amazon">
-        <span class="material-symbols-outlined">search</span>
+        <span class="material-symbols-outlined" id="searchIcon">search</span>
     </div>
-    <div class="country">
-        india
+    <div class="country border-white">
+        <p>English</p>
+        <div class="country-img">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/383px-Flag_of_India.svg.png" alt="">
+            <span class="material-symbols-outlined">arrow_drop_down</span>
+        </div>
     </div>
-    <div class="account">
-        hello, gopika
+    <div class="account border-white">
+        <p>Hello,<span>sign in</span></p>
+        <div class="acc-list">
+            <p>Account & Lists</p>
+            <span class="material-symbols-outlined">arrow_drop_down</span>
+        </div>
     </div>
-    <div class="order">
-        returns and orders
+    <div class="order border-white">
+        <p>Returns <span>& Orders</span></p>
     </div>
-    <div class="cart">
-        cart
+    <div class="cart border-white">
+        <span class="material-symbols-outlined" id="shoppingIcon">shopping_cart</span>
+        <p>Cart</p>
     </div>
 </div>  
-hi
