--- a/amazon/src/app/menu-items/menu-items.component.html
+++ b/amazon/src/app/menu-items/menu-items.component.html
@@ -1,1 +1,54 @@
-<p>menu-items works!</p>
+<div class="menu-container">
+    <div class="all white-border">
+        <span class="material-symbols-outlined">menu</span>
+        <p>All</p>
+    </div>
+    <div class="amazon-tv white-border">
+        <p>Amazon miniTv</p>
+    </div>
+    <div class="sell white-border">
+        <p>Sell</p>
+    </div>
+    <div class="best-seller white-border">
+        <p>Best Sellers</p>
+    </div>
+    <div class="todays-deal white-border">
+        <p>Today's Deals</p>
+    </div>
+    <div class="mobiles white-border">
+        <p>Mobiles</p>
+    </div>
+    <div class="electronics white-border">
+        <p>Electronics</p>
+    </div>
+    <div class="cust-service white-border">
+        <p>Customer Service</p>
+    </div>
+    <div class="prime white-border">
+        <p>Prime</p>
+        <span class="material-symbols-outlined">arrow_drop_down</span>
+    </div>
+    <div class="new-release white-border">
+        <p>New Releases</p>
+    </div>
+    <div class="gift-ideas white-border">
+        <p>Gift Ideas</p>
+    </div>
+    <div class="home-kitchen white-border">
+        <p>Home & Kitchen</p>
+    </div>
+    <div class="fashion white-border">
+        <p>Fashion</p>
+    </div>
+    <div class="amazon-pay white-border"><p>Amazon Pay</p>
+    </div>
+    <div class="computers white-border">
+        <p>Computers</p>
+    </div>
+    <div class="books white-border">
+        <p>Books</p>
+    </div>
+    <div class="car-motor white-border">
+        <p>Car & Motobike</p>
+    </div>
+</div>
