--- a/amazon/src/app/product-listing/product-listing.component.html
+++ b/amazon/src/app/product-listing/product-listing.component.html
@@ -1,1 +1,75 @@
-<p>product-listing works!</p>
+<div class="head-container">
+    <div class="results">
+        <p>1-16 of over 100,000 results for</p>
+        <p class="search">"books"</p>
+    </div>
+    <div class="sort">
+        <button>Sort by: Featured <span class="material-symbols-outlined">expand_more</span></button>
+    </div>
+</div>
+<div class="product-container">
+    <div class="result-header">
+        <p>
+            Results
+        </p>
+    </div>
+    <div class="product-item">
+        <div>
+            <img src="https://m.media-amazon.com/images/I/91eize2JOzL._AC_UY327_FMwebp_QL65_.jpg" alt="Product 1">
+        </div>
+        <div class="product">
+            <div class="product-info">
+                <h3>Rumi's Little Book of Life</h3>
+                <p>by Rumi, Marayam H Mafi, et al.</p>
+                <p>27 December 2019</p>
+                <p>4.5 out of 5 stars 2,083</p>
+            </div>
+            <div class="product-details">
+                <h4>Kindle Edition</h4>
+                <p>₹₹173.46 (33% off)</p>
+                <p>Available instantly</p>
+            </div>
+            <div class="product-details">
+                <h4>Audible Audiobook</h4>
+                ₹0<p style="text-decoration: line-through; font-weight: 20;">₹820</p>
+                <p>Free with Audible trial</p>
+                <p>Available instantly</p>
+            </div>
+            <div class="product-details">
+                <h2>Paperback</h2>
+                <p>₹239 M.R.P: ₹350 (32% off)</p>
+                <p>FREE delivery on orders over ₹499 shipped by Amazon</p>
+            </div>
+        </div>    
+    </div>
+
+    <div class="product-item">
+        <div>
+            <img src="https://m.media-amazon.com/images/I/91eize2JOzL._AC_UY327_FMwebp_QL65_.jpg" alt="Product 1">
+        </div>
+        <div class="product">
+            <div class="product-info">
+                <h3>Rumi's Little Book of Life</h3>
+                <p>by Rumi, Marayam H Mafi, et al.</p>
+                <p>27 December 2019</p>
+                <p>4.5 out of 5 stars 2,083</p>
+            </div>
+            <div class="product-details">
+                <h4>Kindle Edition</h4>
+                <p>₹₹173.46 (33% off)</p>
+                <p>Available instantly</p>
+            </div>
+            <div class="product-details">
+                <h4>Audible Audiobook</h4>
+                ₹0<p style="text-decoration: line-through; font-weight: 20;">₹820</p>
+                <p>Free with Audible trial</p>
+                <p>Available instantly</p>
+            </div>
+            <div class="product-details">
+                <h2>Paperback</h2>
+                <p>₹239 M.R.P: ₹350 (32% off)</p>
+                <p>FREE delivery on orders over ₹499 shipped by Amazon</p>
+            </div>
+        </div>    
+    </div>
+</div>
