--- a/amazon/src/app/header/header.component.html
+++ b/amazon/src/app/header/header.component.html
@@ -16,7 +16,7 @@
         <select>
             <option value="all" class="searchall">All</option>
         </select>
-        <input type="number" placeholder="Search Amazon">
+        <input appNumberOnly type="text" placeholder="Search Amazon">
         <span class="material-symbols-outlined" id="searchIcon">search</span>
     </div>
     <div class="country border-white">
