unit test for directive

--- a/amazon/src/app/product-listing/product-listing.component.scss
+++ b/amazon/src/app/product-listing/product-listing.component.scss
@@ -19,6 +19,7 @@
     align-items: center;
     font-size: 10px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
 }
 .sort{
     padding: 20px;
